<resources>
    <string name="app_name">Chit List</string>
    <string name="admin_description">Enable kiosk mode</string>
    <string name="logo_content_description">App logo</string>
    <string name="version_text">Version 0.1\nCreated by Joseph Zhuang 2019</string>
    <!-- Common -->
    <string name="is_admin">App is a device administrator. Setting kiosk policies.</string>
    <string name="not_admin_warning">Not installed correctly. Kiosk functions may not work.</string>
    <string name="admin">Admin settings</string>
    <string name="primary_key_equals">key=%d</string>
    <string name="balance_is">Balance is $%s</string>
    <string name="dollars">$%s</string>
    <string name="number">%04d</string>
    <string name="invalid_input">Invalid input</string>
    <!-- Buttons -->
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="ok">OK</string>
    <!-- Login -->
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change password</string>
    <!-- Shop -->
    <string name="shop">Shop</string>
    <string name="no_items_message">There are no items in the shop. Contact an administrator to add items.</string>
    <!-- Checkout -->
    <string name="checkout">Checkout</string>
    <string name="no_items_icon">No items icon</string>
    <string name="empty_cart_message">Your cart is empty</string>
    <string name="add_items">Add item(s)</string>
    <string name="error_icon">Error icon</string>
    <string name="exceeded_balance_cap_message">You have exceeded the balance cap: $%s\n Pay off your balance to make further transactions.</string>
    <!-- History -->
    <string name="history">History</string>
    <string name="amount_item">%s: $%s</string>
    <string name="you">(you)</string>
    <string name="none">(none)</string>
    <string name="no_transactions_icon">No transactions icon</string>
    <string name="zero_transactions_message">You have zero transactions recorded</string>
    <!-- Actions -->
    <string name="actions">Actions</string>
    <string name="path">Path</string>
    <string name="pay_account">Pay account</string>
    <string name="edit_config">Edit config</string>
    <string name="export_accounts">Export accounts</string>
    <string name="export_items">Export items</string>
    <string name="export_transactions">Export transactions</string>
    <string name="backup_database">Backup database</string>
    <string name="restore_database">Restore database</string>
    <string name="drop_database">Drop database</string>
    <string name="drop_database_warning">This will permanently delete the current database. This action cannot be undone.</string>
    <string name="exit_application">Exit application</string>
    <string name="info">Info:</string>
    <string name="log">Log:</string>
    <!-- Account -->
    <string name="accounts">Accounts</string>
    <string name="account_name">Account name</string>
    <string name="full_name">%s %s</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="location">Location</string>
    <string name="contact_number">Contact number</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="password_hash">Password hash (SHA-1)</string>
    <string name="last_admin_warning">WARNING: This is the only active admin account. It cannot be disabled.</string>
    <string name="allow_administrator_access">Allow administrator access?</string>
    <string name="allow_interactive_login">Allow interactive login?</string>
    <string name="balance">balance</string>
    <string name="balance_equals">balance=%s</string>
    <!-- Item -->
    <string name="items">Items</string>
    <string name="name">Name</string>
    <string name="name_equals">name=%s</string>
    <string name="price">Price</string>
    <string name="price_equals">price=%d</string>
    <string name="image">Image</string>
    <string name="credit">Credit</string>
    <string name="enabled">Enabled</string>
    <!-- Transaction -->
    <string name="transactions">Transactions</string>
    <string name="time">Time</string>
    <string name="time_equals">time=%d</string>
    <string name="shop_tx">Shop transaction</string>
    <string name="custom_tx">Custom transaction</string>
    <string name="shop_tx_equals">Shop transaction=%s</string>
    <string name="account">Account</string>
    <string name="invalid_account">Invalid account id</string>
    <string name="account_equals">account=%s</string>
    <string name="number_and_full_name">%04d: %s %s</string>
    <string name="creator">Creator</string>
    <string name="creator_equals">creator=%s</string>
    <string name="item">Item</string>
    <string name="invalid_item">Invalid item id</string>
    <string name="item_equals">item=%s</string>
    <string name="number_and_name">%04d: %s</string>
    <string name="amount">Amount</string>
    <string name="amount_equals">amount=%s</string>
    <string name="comments">Comments</string>
    <string name="comments_equals">comments=%s</string>
    <!-- Password -->
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <!-- Pay account -->
    <string name="transaction_created">Transaction created</string>
    <string name="create_transaction_warning">This will create the following transaction. This action cannot be undone.</string>
    <!-- Config -->
    <string name="config">Config</string>
    <string name="app_subtitle">App subtitle</string>
    <string name="app_logo">App logo</string>
    <string name="select_app_logo">Select App Logo</string>
    <string name="database_name">Database name</string>
    <string name="balance_cap">Balance cap</string>
    <string name="decimal_separator_symbol">Decimal separator symbol:</string>
    <string name="point">Point</string>
    <string name="decimal_point">Decimal point</string>
    <string name="comma">Comma</string>
    <string name="decimal_comma">Decimal comma</string>
    <string name="decimal_separator_offset">Decimal separator offset:</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="config_saved">Config saved. Restart to apply changes.</string>
    <string name="go_to_checkout">Go to checkout</string>
</resources>
