<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="transaction"
                type="gensokyo.hakurei.chitlist.database.TransactionWithChildren" />

        <variable
                name="clickListener"
                type="gensokyo.hakurei.chitlist.adapters.HistoryListener" />

        <import type="gensokyo.hakurei.chitlist.utilities.Converter" />
    </data>

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> clickListener.onClick(transaction)}"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="false"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.LeftCutCard">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_normal">

                <ImageView
                        android:id="@+id/image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/no_items_icon"
                        android:visibility="gone"
                        app:srcCompat="@drawable/ic_add_white_24dp" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@{@string/number(transaction.transactionId)}"
                        android:textColor="@color/colorOnPrimary"
                        tools:text="@string/number" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@color/colorSurface"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/spacing_normal"
                    android:paddingTop="@dimen/spacing_extra_small"
                    android:paddingEnd="@dimen/spacing_normal"
                    android:paddingBottom="@dimen/spacing_extra_small">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{@string/amount_item(transaction.item.name, Converter.addDecimal(transaction.amount))}"
                        tools:text="@string/amount_item" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{Converter.convertLongToDateStringShort(transaction.time)}"
                        tools:text="@string/time_equals" />

                <TextView
                        android:id="@+id/creator_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{@string/creator_equals(transaction.creatorId)}"
                        tools:text="@string/creator_equals" />

                <TextView
                        android:id="@+id/comments_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{@string/comments_equals(transaction.comments)}"
                        tools:text="@string/comments_equals" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
