<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="payAccountViewModel"
                type="gensokyo.hakurei.chitlist.payaccount.PayAccountViewModel" />

        <import type="gensokyo.hakurei.chitlist.utilities.Converter" />
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:id="@+id/title_text"
                style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center"
                android:text="@string/pay_account"
                android:textAllCaps="true"
                android:textColor="@color/colorOnPrimary"
                android:textSize="16sp" />

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_large">

                <TextView
                        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{@string/primary_key_equals(payAccountViewModel.transaction.transactionId)}"
                        android:textAllCaps="true"
                        tools:text="@string/primary_key_equals" />

                <TextView
                        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{Converter.convertLongToDateStringExpanded(payAccountViewModel.transaction.time)}"
                        android:textAllCaps="true"
                        android:textSize="12sp"
                        tools:text="@string/time_equals" />

                <TextView
                        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_normal"
                        android:text="@{payAccountViewModel.transaction.type ? @string/shop_tx : @string/custom_tx}"
                        android:textAllCaps="true"
                        android:textSize="12sp"
                        tools:text="@string/shop_tx" />

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/account_input"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/account"
                        android:labelFor="@id/account_autocomplete">

                    <AutoCompleteTextView
                            android:id="@+id/account_autocomplete"
                            style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textNoSuggestions|textVisiblePassword"
                            android:text="@={Converter.toAccountName(payAccountViewModel.transaction.accountId)}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{false}"
                        android:hint="@string/creator">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/creator_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:text="@={Converter.toAccountName(payAccountViewModel.transaction.creatorId)}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/item_input"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/item"
                        android:labelFor="@id/item_autocomplete">

                    <AutoCompleteTextView
                            android:id="@+id/item_autocomplete"
                            style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textNoSuggestions|textVisiblePassword"
                            android:text="@={Converter.toItemName(payAccountViewModel.transaction.itemId)}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/amount">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/amount_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number|numberSigned|numberDecimal"
                            android:text="@={Converter.addDecimal(payAccountViewModel.transaction.amount)}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/comments">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/comments_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLines="1"
                            android:text="@={payAccountViewModel.transaction.comments}" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                            android:id="@+id/cancel_button"
                            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cancel" />

                    <com.google.android.material.button.MaterialButton
                            android:id="@+id/create_button"
                            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="@{payAccountViewModel.enableUpdate}"
                            android:text="@string/create" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>
